# llm-prompt-framework-and-eval-suite

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
configs/: support_ticket_classification.yaml
data/: README.md  support_tickets.csv
data/datasets/: classification_examples.jsonl  extraction_examples.jsonl  summarization_examples.jsonl
data/gold_labels/: classification_gold.jsonl  extraction_gold.jsonl  summarization_gold.jsonl
docs/: architecture.md  dataset_description.md  evaluation_guide.md  prompt_design.md
reports/: README.md
reports/samples/: sample_eval_report.html  sample_eval_report.md  sample_eval_results.csv
scripts/: inspect_sum1.py  run_eval.py
src/llm_eval_suite/: __init__.py
src/llm_eval_suite/config/: default_config.yaml
src/llm_eval_suite/eval/: loaders.py  reporting.py  run_eval.py  safety_checks.py  scoring.py
src/llm_eval_suite/prompts/: base_classification_prompt.md  base_extraction_prompt.md  base_summarization_prompt.md
src/llm_eval_suite/prompts/few_shot_examples/: classification_few_shots.json  extraction_few_shots.json  summarization_few_shots.json
src/llm_eval_suite/schemas/: classification_schema.py  extraction_schema.py  summarization_schema.py
src/llm_eval_suite/utils/: llm_client.py  logging_utils.py
tests/: conftest.py  test_config_loading.py  test_llm_client.py  test_loaders.py  test_metrics.py  test_prompt_templates.py  test_provider_mock.py  test_safety_checks.py  test_scoring.py
